--- a/spark-frontend/src/App.css
+++ b/spark-frontend/src/App.css
@@ -40,3 +40,14 @@
 .read-the-docs {
   color: #888;
 }
+
+@font-face {
+  font-family: 'SF Pro Text';
+  font-weight: normal;
+  font-style: normal;
+  src: local("SF Pro Text"), local("-apple-system"), local("BlinkMacSystemFont"), local("Segoe UI"), local("Roboto"), local("Helvetica Neue"), local("Arial"), sans-serif;
+}
+
+body {
+  font-family: "SF Pro Text", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
